# covert

./: README.md  cast.py  clexer.py  covert.py  cparser.py  pyproject.toml  vin.py  vinterpreter.py  vlexer.py  vparser.py
examples/: hello.covert
