[project]
name = "vin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EdwardTheLegend", email = "40855056+EdwardTheLegend@users.noreply.github.com"},
]
dependencies = [
    "argparse>=1.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.7",
]

[tool.ruff]
line-length = 100